--- a/lib/ecoles_web/templates/eleves/form.html.heex
+++ b/lib/ecoles_web/templates/eleves/form.html.heex
@@ -5,42 +5,26 @@
       </div>
     <% end %>
   
-    <%= label f, :nom %>
+    <%= label f, "Nom" %>
     <%= text_input f, :nom %>
     <%= error_tag f, :nom %>
     
-    <%= label f, :prenom %>
+    <%= label f, "Prenom" %>
     <%= text_input f, :prenom %>
     <%= error_tag f, :prenom %>
 
-    <%= label f, :age %>
+    <%= label f, "Age" %>
     <%= number_input f, :age %>
     <%= error_tag f, :age %>
     
-    <%= select f, :sexe_id, value: @conn.assigns.sexe.nom, class: "form-control" %>
-    <%= error_tag f, :sexes_id %>
+    <%= label f, "Sexe" %>
+    <%= select f, :sexes_id, Enum.map(@sexe, &{&1.nom, &1.id}), prompt: "Choisir le sexe" %>
+   
+    <%= label f, "Classe" %>
+    <%= select f, :classe_id, Enum.map(@classe, &{&1.nomclasse, &1.id}), prompt: "Choisir une classe" %>
 
-    <label for="pet-select">Sexe</label>
-    <select name="sexes_id" id="pet-select">
-        <option value="">Choisir le sexe</option>
-        <%= for sexes <- @sexe do %>
-          <option value={sexes.id} style="background: #1F2937; color: #fff;">
-        <%= sexes.nom %>
-        </option>
-      <% end %>
-    </select>
-
-   <label for="pet-select">Classe</label>
-    <select name="classe_id" id="pet-select">
-        <option value="">Choisir la classe</option>
-        <%= for classes <- @classe do %>
-         <option value={classes.id} style="background: #1F2937; color: #fff;">
-        <%= classes.nomclasse %>
-        </option>
-      <% end %>
-    </select>
     <div>
       <%= submit "Enregistrer" %>
     </div>
-  </.form>
+</.form>
   
