--- a/lib/ecoles_web/templates/eleves/repFiltre.html.heex
+++ b/lib/ecoles_web/templates/eleves/repFiltre.html.heex
@@ -18,6 +18,7 @@
           <td><%= eleves.prenom %></td>
           <td><%= eleves.age %>  <span>ans</span></td>
           <td><%= eleves.sexe %></td>
+          <td><%= eleves.classe %></td>
         </tr>
       <% end %>
     </tbody>
