suites gestions notes

--- a/lib/ecoles_web/templates/classes/edit.html.heex
+++ b/lib/ecoles_web/templates/classes/edit.html.heex
@@ -1,4 +1,4 @@
-<h1>Edit Classes</h1>
+<h1 class="title">Edit Classes</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.classes_path(@conn, :update, @classes)) %>
 
