--- a/lib/ecoles_web/templates/classes/new.html.heex
+++ b/lib/ecoles_web/templates/classes/new.html.heex
@@ -1,4 +1,4 @@
-<h1>Nouveau classe</h1>
+<h1 class="title">Nouveau classe</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.classes_path(@conn, :create)) %>
 
