--- a/lib/ecoles_web/templates/eleves/inscription.html.heex
+++ b/lib/ecoles_web/templates/eleves/inscription.html.heex
@@ -1,4 +1,4 @@
-<p>Formulaire d'inscription eleves</p>
+<h1 class="title">Formulaire d'inscription eleves</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.eleves_path(@conn, :createELeves)) %>
 
