--- a/lib/ecoles_web/templates/eleves/show.html.heex
+++ b/lib/ecoles_web/templates/eleves/show.html.heex
@@ -1,4 +1,4 @@
-<h1 class="title">Resultat Filtre</h1>
+<h4 class="title">Nouveau Eleves</h4>
 <table>
     <thead>
       <tr>
@@ -7,8 +7,6 @@
         <th>Age</th>
         <th>Sexe</th>
         <th>Classe</th>
-
-        <th></th>
       </tr>
     </thead>
     <tbody>
