--- a/lib/ecoles_web/templates/matiere/index.html.heex
+++ b/lib/ecoles_web/templates/matiere/index.html.heex
@@ -1,4 +1,4 @@
-<h1>Listing Matieres</h1>
+<h1 class="title">Listes Matieres</h1>
 <div>
   <span><%= link "Ajouter un matiere", to: Routes.matiere_path(@conn, :new) %></span>
 </div>
