--- a/lib/ecoles_web/templates/matiere/new.html.heex
+++ b/lib/ecoles_web/templates/matiere/new.html.heex
@@ -1,4 +1,4 @@
-<h1>Nouveau Matiere</h1>
+<h1 class="title">Nouveau Matiere</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.matiere_path(@conn, :create)) %>
 
