--- a/lib/ecoles_web/templates/sexe/new.html.heex
+++ b/lib/ecoles_web/templates/sexe/new.html.heex
@@ -1,4 +1,4 @@
-<h1>Nouveau Sexe</h1>
+<h1 class="title">Nouveau Sexe</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.sexe_path(@conn, :create)) %>
 
