--- a/lib/ecoles_web/templates/layout/root.html.heex
+++ b/lib/ecoles_web/templates/layout/root.html.heex
@@ -71,7 +71,6 @@
       }
       .navbar a {
         padding: 18px 0;
-        border-left: 1px solid #ccc9c9;
         text-decoration: none;
         color: blue;
         display: block;
@@ -101,6 +100,12 @@
       .navbar li ul li a:hover {
         background-color:cyan;
       }
+      .title{
+        padding-top: 10px;
+        color:firebrick;
+        font-family:Georgia, 'Times New Roman', Times, serif;
+        font-size:x-large;
+    }
 </style>
 <!DOCTYPE html>
 <html lang="en">
@@ -136,7 +141,7 @@
                   <li><a href={Routes.notes_path(@conn, :gotoPageSaisieNotes)}>Gestions notes</a></li>
                 </ul>
               </li>
-              <li><a href={Routes.admin_path(@conn, :sign_out)}>Deconnexion</a></li>
+              <li><a href={Routes.admin_path(@conn, :sign_out)}>Déconnexion</a></li>
           </ul>
       </div>
       <div class="contenu">
