--- a/lib/ecoles_web/templates/matiere/edit.html.heex
+++ b/lib/ecoles_web/templates/matiere/edit.html.heex
@@ -1,4 +1,4 @@
-<h1>Edit Matiere</h1>
+<h1 class="title">Edit Matiere</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.matiere_path(@conn, :update, @matiere)) %>
 
