--- a/lib/ecoles_web/templates/sexe/edit.html.heex
+++ b/lib/ecoles_web/templates/sexe/edit.html.heex
@@ -1,4 +1,4 @@
-<h1>Edit Sexe</h1>
+<h1 class="title">Edit Sexe</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.sexe_path(@conn, :update, @sexe)) %>
 
