--- a/lib/ecoles_web/templates/admin/form.html.heex
+++ b/lib/ecoles_web/templates/admin/form.html.heex
@@ -6,6 +6,7 @@
         width:400px;
         margin:0 auto;
         margin-top:10%;
+        height: auto;
     }
     /* Bordered form */
     form {
@@ -49,10 +50,25 @@
         
     }
     .retour{
-        margin-top: 5px;
-        float:left;
+        margin-top: 0px;
+        float:right;
         margin-bottom: 5px;
         text-decoration: underline;
+    }
+    .button {
+        background-color: #008CBA; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        }
+    .alert-danger{
+        background-color: red;
+        width: auto;
+        color: white;
     }
   </style>
   <html>
@@ -87,12 +103,10 @@
                 <%= text_input f, :mdp %>
                 <%= error_tag f, :mdp %>
               
-                <div id="submit">
-                  <%= submit "Enregistrer" %>
-                </div>
+                <%= submit "Enregister", class: "button", align: "center" %>
                 <div class="retour">
                   <p><a href={Routes.page_path(@conn, :goTopageLogin)}>Retour</a></p>
-                 </div>
+                </div>
               </.form>
           </div>
       </body>
