--- a/lib/ecoles_web/templates/statistiques/statistiques.html.heex
+++ b/lib/ecoles_web/templates/statistiques/statistiques.html.heex
@@ -1,6 +1,5 @@
 <style>
     .chartPie {
-        width: 230px;
         border: 1px solid black;
     }
 </style>
@@ -28,7 +27,7 @@
     };
   
     const config = {
-      type: 'doughnut',
+      type: 'line',
       data: data,
       options: {}
     };
