--- a/lib/ecoles_web/templates/layout/root.html.heex
+++ b/lib/ecoles_web/templates/layout/root.html.heex
@@ -138,7 +138,7 @@
                   <li><a href={Routes.classes_path(@conn, :goto_page_resultat)}>Resultat</a></li>
                 </ul>
               </li>
-              <li><a href={Routes.statistiques_path(@conn, :statistiques)}>Statistiques</a></li>
+              <li><a href={Routes.eleves_path(@conn, :charts)}>Statistiques</a></li>
               <li><a href="#">Autre parametres</a>
                 <ul class="sub">
                   <li><a href={Routes.sexe_path(@conn, :index)}>Sexe</a></li>
